sass/wmlunits: Fix regression causing the main panel to grow too large

--- a/wesmere/sass/wmlunits/_common.scss
+++ b/wesmere/sass/wmlunits/_common.scss
@@ -66,7 +66,7 @@ div.navbar {
 	}
 
 	div.main {
-		flex: 1 0 auto;
+		flex: 1 1 auto;
 	}
 }
 
